# youtube-transcriber

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: main.py  schemas.py  storage.py  transcriber.py  worker.py
docker/: entrypoint.dev.sh
tests/: test_main.py  test_storage.py  test_transcriber.py  test_worker.py
