[project]
name = "youtube-transcriber"
version = "0.1.0"
description = "API for fetching YouTube video transcripts"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "youtube-transcript-api>=1.2,<2",
    "pydantic>=2.10,<3",
    "aiosqlite>=0.20,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "httpx>=0.28,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
